--- a/15.html
+++ b/15.html
@@ -4,38 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>블럭탑쌓기</title>
+    <title>하노이의 탑</title>
     <link href="./common.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <p class="tit">블럭탑쌓기</p>
-    <img src="./img/15.png" alt="">
+    <p class="tit">하노이의 탑</p>
+    <img class="code" src="./img/15_1.png" alt="">
+    <img class="code" src="./img/15_2.png" alt="">
 <script>
-const 전체블록 = ["ABCDEF", "BCAD", "ADEFQRX", "BEDFG", "EFGHZ"];
-const 규칙 = "ABD";
+    const route = [];
 
-function solution(전체블록, 규칙){
-    let answer = [];
-    for(let 부분블록 of 전체블록){
-        answer.push(블록순서체크(부분블록));
+    function hanoi(원반의수, 시작기둥, 목표기둥, 보조기둥){
+    //원판이 한 개일 때에는 바로 옮기면 됩니다.
+    if (원반의수 === 1) {
+        route.push([시작기둥, 목표기둥]);
+        return NaN;
     }
-    return answer;
-}
 
-function 블록순서체크(부분블록, 규칙){
-    let 임시변수 = 규칙.indexOf(규칙[0]);
-    for(let 문자 of 부분블록){
-        if(규칙.includes(문자)){
-            if(임시변수 > 규칙.indexOf(문자)){
-                return '불가능';
-            }
-            임시변수 = 규칙.indexOf(문자);
-        }
+    //원반이 n-1개를 경유기둥으로 옮기고
+    hanoi(원반의수-1, 시작기둥, 보조기둥, 목표기둥);
+    //가장 큰 원반은 목표기둥으로
+    route.push([시작기둥, 목표기둥]);
+    //경유기둥과 시작기둥을 바꿉니다.
+    hanoi(원반의수-1, 보조기둥, 목표기둥, 시작기둥);
     }
-    return '가능';
-}
 
-console.log(solution(전체블록, 규칙));
+    hanoi(3, 'A', 'B', 'C');
+    console.log(route);
+    console.log(route.length);
+
+
+
+    /*
+
+    하노이(원반의수, 시작기둥, 목표기둥, 보조기둥)
+
+    function 하노이(1, 'A', 'C', 'B')
+        function 하노이(1, 'A', 'B', 'C')
+            function 하노이(1, 'A', 'C', 'B')
+                원판의이동경로.push('A', 'C')   // 1번째
+            원판의이동경로.push('A', 'B')   // 2번째
+            function 하노이(1, 'C', 'B', 'A')
+                원판의이동경로.push('C', 'B')   // 3번째
+
+        원판의이동경로.push('A', 'C')   // 4번째
+
+        function 하노이(2, 'B', 'C', 'A')
+            function 하노이(1, 'B', 'A', 'C')
+                원판의이동경로.push('B', 'A')   // 5번째
+            원판의이동경로.push('B', 'C')   // 6번째
+            function 하노이(1, 'A', 'C', 'B')
+                원판의이동경로.push('A', 'C')   // 7번째
+
+    // 4개짜리 연습해보기
+
+    */
 </script>
 </body>
 </html>
