--- a/index.html
+++ b/index.html
@@ -94,41 +94,46 @@
             },
             {
                 id: 14,
-                title: '하노이의 탑',
+                title: '연결리스트',
                 link: '14.html'
             },
             {
                 id: 15,
+                title: '하노이의 탑',
+                link: '14.html'
+            },
+            {
+                id: 16,
                 title: '블럭탑쌓기',
                 link: '15.html'
             },
             {
-                id: 16,
+                id: 17,
                 title: '악수 횟수',
                 link: '16.html'
             },
             {
-                id: 17,
+                id: 18,
                 title: '버스 시간표',
                 link: '17.html'
             },
             {
-                id: 18,
+                id: 19,
                 title: '골드바흐파티션',
                 link: '18.html'
             },
             {
-                id: 19,
+                id: 20,
                 title: '지뢰찾기',
                 link: '19.html'
             },
             {
-                id: 20,
+                id: 21,
                 title: '',
                 link: '20.html'
             },
             {
-                id: 21,
+                id: 22,
                 title: '',
                 link: '21.html'
             },
